--- a/style.css
+++ b/style.css
@@ -4,32 +4,36 @@
     box-sizing: border-box;
     font-family: 'Segoe UI', sans-serif;
 }
-
 header{
-position:relative;
 top: 0%;
 left: 0%; 
 width: 100%;
-padding: 20px 120px;
+padding: 20px 100px;
 background: white ;
 display: flex;
 justify-content: space-between;
 align-items: center;
-z-index:100;
+z-index:10;
 }
 
 nav a{
-
-    font-size: 18px;
-    color: rgb(126, 126, 126);
+    top: 0px;
+    left:0px;
+    padding: 6px;
+    font-size: 20px;
+    color: rgb(164, 159, 159);
     text-decoration: none;
-    font-weight: 300;
-    margin-left:35px;
+    margin-left:10px;
+    row-gap: 20px;
 }
+.download-icon {
+  filter: invert(26%) sepia(97%) saturate(7109%) hue-rotate(253deg) brightness(102%) contrast(109%);
+}
+
 
 nav a:hover,
 nav a.Active{
-    color:rgb(0, 55, 221);
+    color:rgb(52, 103, 255);
 }
 
 
@@ -37,10 +41,15 @@ nav a.Active{
 /*company information card*/
 
 .container{
-    
- max-width: 1200px;
- margin: 20px auto;
-padding:0 20px;
+    position: relative;
+    top: 0px;
+ width: 1500px;
+ height:450px;
+ border: 1px solid rgb(180, 180, 180);
+ padding: 30px 10px;
+ margin: 30px auto;
+ border-radius: 14px;
+ background-color: #ffffff;
 }
 
 .company-header{
@@ -48,7 +57,7 @@ padding:0 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 .company-logo {
     display: flex;
@@ -63,157 +72,204 @@ padding:0 20px;
 }
 .company-name {
     font-size: 40px;
+    font-weight: 10px;
     color: #333;
 }
 .action-buttons {
     display: flex;
     gap: 13px;
     align-items: center;
- 
 }
 .btn-download{
-    background-color: #f5f5f5;
+ background-color: #f5f5f5;
  color: #333;
+ padding: 11px 20px;
+ border-radius:5px;
 }
 
 .btn-btn-download{
-    background-color: #4949f7;
+    background-color: #6851ff;
+    padding: 10px 20px;
+    letter-spacing: 3px;
+    border-radius: 7px;
     color: #ffffff;
 }
 
 .btn-Launch-Chart{
-    background-color: #f5f5f5;
-    color: #000000;
+    color: #ffffff;
+    border: none;
+}
+
+.download-icon{
+  width: 15px;
 }
 
 .company-links {
-    display: flex;
+  display: flex;
+  top: 40px;
+  float: left;
+  gap: 50px;
+  align-items: center;
+  font-size: 22px;
+  color: #9b9b9b; 
+}
+.company-links a{
+  display: flex;
+  align-items: center;
+  gap:1px;
+  margin-bottom: 20px;
+  z-index: 100;
+}
 
-    font-size: 20px;
-    gap: 20px;
-    margin-bottom: 20px;
-}
-.link {
-    color: #6366f1;
-    text-decoration: none;
+.link{
     display: flex;
+    gap: 3px;
+    color: #94949d;
+    text-decoration: none;
     align-items: center;
-    gap: 5px;
 }
-.metrices-card{
+
+.icon1, .icon2, .icon3 {
+  width: 14px;
+  filter: invert(26%) sepia(97%) saturate(7109%) hue-rotate(253deg) brightness(102%) contrast(109%);
+}
+.about-section {
+  width: 30%;
+  margin: 10px;
+  line-height: 1.2;
+  word-spacing: 2px;
+  position: absolute;
+  right: 0px;
+  top:90px;
+  padding: 40px;
+  color: #919191;
+  font-size:18px;
+}
+
+.about{
+    font-size:19px;
+    word-spacing: 3px;
+    line-height: 1.5em;
+    color: #c8c7c7;
+}
+
+  .more-text {
+    display: none; /* Initially hidden */
+  }
+  .read-more-btn {
+    margin-top: 10px;
+    left:70px;
+    padding: 5px 10px;
+    color: rgb(109, 123, 255);
+    border: none;
+    border-radius: 5px; 
+    cursor: pointer;
+  }
+ 
+.about-title {
+  top: 10px;
+  margin-bottom: 10px;
+  font-size: 23px;
+  color: #333;
+}
+.more {
+  display: none;
+  margin-bottom: 30px;
+}
+
+p{
+  display: inline; 
+}
+input[type=checkbox]{
+  height: 2em;
+  display: block;
+  appearance: none;
+}
+label{
+  position: relative;
+  margin-bottom:30px;
+  padding: 1em;
+  color:#3f65ff;
+  cursor: pointer;
+}
+
+label:before{
+  content: "Read More";
+}
+input[type="checkbox"]:checked ~ label:before{
+  content: "Read Less";
+} 
+.dots:has(~input[type="checkbox"]:checked){
+    display: none;
+}
+.more:has(~input[type="checkbox"]:checked){
+  display: inline;
+}
+ .metrices-card{
+  top: 160px;
+  position: absolute;
+  left: 0%;
+ margin-bottom: 30px;
  background-color: white;
  border-radius: 10px;
- padding: 20px;
- box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+ justify-content: space-between;
+ padding:5px;
+ box-shadow: 0 1px 3px rgb(166, 166, 166);
  display: grid;
  grid-template-columns: repeat(3, 1fr); /* Three columns */
  grid-template-rows: auto auto; /* Two rows */
-  gap:17px;
+ width: 70%;
+ height: 200px;
+
 }
 .metric{
-
+    top: 30px;
+    font-size: 25px;
+    line-height: 1.0; 
     display: flex;
+    margin-bottom: 2px;
     flex-direction: row;
-    gap: 8px;
-    margin-right: 5px;
-
+    gap: 170px;
+    margin-top: 25px; 
 }
 .metric-label {
-     color: #9b9b9b;
-     font-size: 17px;
-     gap:15px;
-     margin-right: 5px;
-
+     color: #929292;
+     font-size:17px;
+     margin-top: 0px;
+     gap: 170px;
 }
+.metric1{
+ line-height: 0.2e;
+ display: flex;
+ align-items: center;
+ background-color: #f0f0f0;
+ width: 300px;
+ height:60px;
+ gap: 170px;
+ border-radius: 10px;
+}
+
 .metric-value {
     font-size: 18px;
-    font-weight: 500;
-    gap: 20px; /* Increases spacing between label and value */
-
+    font-weight: 500px;
+    gap: 80px; /* Increases spacing between label and value */
     color:#333;
     }
 .metrics {
         width: 100%;
-      }
+}
       
 .metric-row {
     padding: 15px;
+    gap: 90px;
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
-  
   .metric-row:nth-child(even) {
-    background-color: #f8f9fc; /* Light purple/grey background */
+    background-color: #d8d8d8; /* Light purple/grey background */
     border-radius: 8px;
   }
-
-.about-section {
-    flex: 1;
-    margin-top: 20px;
-}
-
-.about-title {
-    font-size: 18px;
-    color: #333;
-    margin-bottom: 10px;
-}
-
-.about-content {
-    color: #666;
-    line-height: 1.6;
-}
-.read-more {
-    color: #6366f1;
-    text-decoration: none;
-    margin-top: 10px;
-    display: inline-block;
-}
-
-/* Aout Section */
-.aboutContainer {
-    background-color: #ebeef5;
-    padding: 1px;
-    border-radius: 2px;
-}
-
-.cards {
-    max-width: 106.8rem;
-    margin: 30px auto;
-    padding: 6px 60px;
-    background-color: #ffffff;
-    border-radius: 10px;
-}
-
-.cardsHead {
-    font-size: 1.6rem;
-    letter-spacing: -0.019rem;
-    font-weight: 500;
-    padding-bottom: 10px;
-}
-
-.card1 {
-    margin: 10px;
-}
-
-.card1 p {
-    font-weight: 500;
-    letter-spacing: 0.1rem;
-    color: #787374;
-}
-
-.normalTableData {
-    padding: 14px;
-    color: #787374;
-}
-
-.CardsBody {
-    text-align: center;
-}
-
-.CardsRow {
-    padding-bottom: 10px;
-}
 
 
 
@@ -243,3 +299,79 @@ padding:0 20px;
         flex-wrap: wrap;
     }
 }
+
+
+
+.container-2{
+    position: relative;
+    display: flex;
+    border: 2px solid rgba(178, 178, 178, 0.968);
+    justify-content: space-around;
+    padding: 13px 20px;
+    border-radius: 14px;
+    margin: 20px auto;
+    width: 1500px;
+    height:250px;
+    gap: 20px;
+ }
+.card {
+    position: relative;
+    background-color: #ffffff;
+    border: 1px solid #dbdbdb;
+    border-radius: 12px;
+    box-shadow: 0 2px 4px rgba(181, 180, 180, 0.1);
+    padding: 18px;
+    width: 50%; 
+    font-size: 20px;
+    top: 20px;
+    height: 60px;
+  }
+  
+  .card h2 {
+    font-family: Arial, sans-serif;
+    font-size: medium;
+  }
+  
+  .card ul {
+    padding-left: 20px;
+  }
+  
+  .card ul li {
+    line-height: 1.7;
+  }
+  
+  .pros {
+    height: 180px;
+    padding: 15px;
+    font-size: 1.2em;
+    border: 1.3px solid #86e096;
+  }
+  
+  .pros h2 {
+    font-size: 1.0em;
+
+    color: #28a745;
+    letter-spacing: 2px;
+
+  }
+  
+  .cons {
+    height: 180px;
+    line-height: 1.7;
+    font-size: 1.2em;
+    padding:20px;
+    border: 1px solid #f35d5d;
+  }
+  
+  .cons h2 {
+    letter-spacing: 2px;
+    font-size: 1.0em;
+    color: #dc3545;
+  }
+  
+  .disclaimer {
+    top:400px;
+    right: 40px;
+    font-size: 1.0em;
+    color: #bdc1c3;
+  }
